<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="NativeRunner_activity">NativeRunner</string>
        <string name="resolution_option">Resolution Options</string>
	<string name="width1">Width:</string>
	<string name="height1">Height:</string>
	<string name="widthvalue">500</string>
	<string name="heightvalue">500</string>
        <string name="antialiasing_option">Antialiasing Options</string>
        <string name="noaa">No AA</string>
        <string name="cmaa">CMAA</string>
        <string name="msaa">MSAA</string>
        <string name="B2T_option">Binary Data to Text Options</string>
        <string name="B2T">Enable Binary Data to Text</string>
        <string name="debug_mode_option">Debug Mode Options</string>
        <string name="check_gl_error">Check GL Error</string>
        <string name="profiling_cb">Enable profiling gl commands:</string>
        <string name="profiling_gl_count">1000000</string>
        <string name="NoW2NData">No W2NData in the sdcard</string>

</resources>

